--- a/tsconfigRules.json
+++ b/tsconfigRules.json
@@ -19,7 +19,8 @@
             "dom",
             "es2015.promise",
             "es2015.collection",
-            "es2015.iterable"
+            "es2015.iterable",
+            "es2020.bigint"
         ],
         "outDir": ".temp/manualBuild"
     }
