--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@types/react-color": "^3.0.2",
         "@types/react-dom": "^16.9.8",
         "@types/sinon": "^9.0.4",
+        "@types/tapable": "2.2.1",
         "base64-font-loader": "^0.0.4",
         "chai": "^4.2.0",
         "clean-webpack-plugin": "^3.0.0",
