--- a/tsconfigRules.json
+++ b/tsconfigRules.json
@@ -19,9 +19,7 @@
             "dom",
             "es2015.promise",
             "es2015.collection",
-            "es2015.iterable",
-            "es2015.symbol.wellknown",
-            "es2020.bigint"
+            "es2015.iterable"
         ],
         "outDir": ".temp/manualBuild"
     }
