--- a/Tools/Gulp/package.json
+++ b/Tools/Gulp/package.json
@@ -16,5 +16,9 @@
     },
     "dependencies": {
         "node-sass": "^4.14.1"
+    },
+    "devDependencies": {
+        "gulp": "4.0.0",
+        "typescript": "~4.2.4"
     }
 }
