--- a/reflectorBridge/.vscode/launch.json
+++ b/reflectorBridge/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "runtimeArgs": [
                 "run",
-                "debug"
+                "start"
             ],
             "runtimeExecutable": "npm",
             "skipFiles": [
